--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 }
 </script>
 </head>
-  <body class="bg-light-gray font-cairo">
+  <body class="bg-primary font-cairo">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
